Fix scrollbar not showing in Game Properties on expand

--- a/scss/_module_gameproperties.scss
+++ b/scss/_module_gameproperties.scss
@@ -16,10 +16,6 @@
   max-width: unset;
 }
 
-.ModalDialogPopup .DialogContentTransition .DialogBody {
-  overflow-y: hidden;
-}
-
 ._1FyBL6obxHQ2Z2CsaV2Gbz ._2V2nc3qHRjg_726Zc2HT28 {
   background: var(--CheckBoxColor);
 }
